fixing truncate

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,7 +57,7 @@ h6 {
 -------------------------------------------------- */
 
 .truncate {
-  width: 230px;
+  width: 170px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
